tests/errors/eachMutateReceiver.milo
// @error: cannot call 'push' on 'items' because it is borrowed

fn main(): i32 {
    var items: Vec<i64> = Vec.new()
    items.push(1)
    items.each((x: &i64) => {
        items.push(1)
    }
    )
    return 0
}
